Correction du css pour gérer convenablement les z-index

--- a/public/styles/testify.css
+++ b/public/styles/testify.css
@@ -16,6 +16,7 @@ html {
 
 body {
   position: relative;
+  z-index: 1;
   min-height: 100%;
   margin: 0;
   padding: 0;
@@ -60,13 +61,13 @@ a {
 /* Style de la barre de navigation */
 .navigation {
   position: sticky;
-  top: 70px;
+  top: 73px;
   background-color: #004e86;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
-  z-index: 1;
+  z-index: 0;
 }
 
 /* Style pour les tableaux (à optimiser) */
@@ -94,6 +95,7 @@ th {
 
 /* Style pour les zones de texte */
 section {
+  position: relative;
   z-index: -1; /* Gere la disposition par rapport aux autres éléments */
   display: flex;
   justify-content: space-around;
